RESULTS/AutoSpec/raw_results/out-4o-nla/10_0002/10_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/10_0002/10_merged.c:27:5: error: unterminated comment
   27 |     /*@;
      |     ^
